exercise-1.2/project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: shared-data-pvc
      containers:
        - name: project
          image: project
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: shared-data
              mountPath: /usr/src/app/files
