exercise-1.2/project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: project
spec:
  type: ClusterIP
  selector:
    app: project
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
